--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>vdomain</groupId>
     <artifactId>vdomain</artifactId>
+    <packaging>pom</packaging>
     <version>1.0</version>
+    <modules>
+        <module>ConfigurationModule</module>
+    </modules>
 
     <properties>
         <org.springframework.version>3.1.1.RELEASE</org.springframework.version>
